--- a/cs180/proj5/index.html
+++ b/cs180/proj5/index.html
@@ -912,6 +912,19 @@
             </table>
         </div>
 
+        <br>
+        <br>
+        <h2 align="middle">Section V: Conclusion</h2>
+        <div class="bounding-box">
+            <h3 align="middle">
+                Learnings
+            </h3>
+            <p>
+                The coolest thing I learned from this project was how to create the estimated noise, sampling loops and then use them to edit the images. I loved using it to do the inpainting and visual anagrams. It was very cool to generate an image from random noise too.
+            </p>
+        </div>
+
+
 
         <br>
         <br>
@@ -1262,9 +1275,10 @@
                 sample blocks.
             </p>
             <p>
-                Compared to the previous time conditioned UNet's training algorithm, the only main difference being the addition of the conditioning vector 
+                Compared to the previous time conditioned UNet's training algorithm, the only main difference being the
+                addition of the conditioning vector
                 $c$
-                 and periodically performing unconditional generation.
+                and periodically performing unconditional generation.
             </p>
 
             <table>
@@ -1304,7 +1318,8 @@
                 </tr>
             </table>
             <p>
-                Here are some sampling results for the class conditioned UNet model with classifier-free guidance of $\gamma = 5.0$:
+                Here are some sampling results for the class conditioned UNet model with classifier-free guidance of
+                $\gamma = 5.0$:
             </p>
 
             <table>
@@ -1334,6 +1349,18 @@
                     </td>
                 </tr>
             </table>
+        </div>
+
+        <br>
+        <br>
+        <h2 align="middle">Section III: Conclusion</h2>
+        <div class="bounding-box">
+            <h3 align="middle">
+                Learnings
+            </h3>
+            <p>
+                The coolest thing I learned from this project was how to build my own diffusion model with each of the components and how to connect them properly. I learned the importance of having correct tensor shapes so that the model can properly train on the images. 
+            </p>
         </div>
 
 </body>
