--- a/cs180/hamburger.html
+++ b/cs180/hamburger.html
@@ -12,4 +12,5 @@
     <a href="/cs180/proj3/">Project 3</a>
     <a href="/cs180/proj4/">Project 4</a>
     <a href="/cs180/proj5/">Project 5</a>
+    <a href="/cs180/final-project/">Final Project</a>
 </div>
