Added Mona Lisa

--- a/cs180/final-project/index.html
+++ b/cs180/final-project/index.html
@@ -333,9 +333,27 @@
                         <figcaption>Hikers with Penguin</figcaption>
                     </td>
                 </tr>
+                <tr align="center">
+                    <td>
+                        <img src="./Images/gradient-domain-fusion/poisson-blending/apocalypse.png" align="middle" />
+                        <figcaption>Apocalypse (Background)</figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/gradient-domain-fusion/poisson-blending/mona-lisa.png" align="middle" />
+                        <figcaption>Mona Lisa (Foreground)</figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/gradient-domain-fusion/poisson-blending/mona-lisa-mask.png" align="middle" />
+                        <figcaption>Mona Lisa (Mask)</figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/gradient-domain-fusion/poisson-blending/apocalypse-with-mona-lisa.png"
+                            align="middle" />
+                        <figcaption>Apocalypse with Mona Lisa</figcaption>
+                    </td>
+                </tr>
             </table>
             <br>
         </div>
 </body>
-
 </html>
