Added Ian Shooting

--- a/cs180/final-project/index.html
+++ b/cs180/final-project/index.html
@@ -352,6 +352,25 @@
                         <figcaption>Apocalypse with Mona Lisa</figcaption>
                     </td>
                 </tr>
+                <tr align="center">
+                    <td>
+                        <img src="./Images/gradient-domain-fusion/poisson-blending/steph-shooting.png" align="middle" />
+                        <figcaption>Steph Shooting (Background)</figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/gradient-domain-fusion/poisson-blending/ian.png" align="middle" />
+                        <figcaption>Ian Face (Foreground)</figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/gradient-domain-fusion/poisson-blending/ian-mask.png" align="middle" />
+                        <figcaption>Ian Face (Mask)</figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/gradient-domain-fusion/poisson-blending/ian-shooting.png"
+                            align="middle" />
+                        <figcaption>Ian Shooting</figcaption>
+                    </td>
+                </tr>
             </table>
             <br>
         </div>
