Done with writeup

--- a/cs180/final-project/index.html
+++ b/cs180/final-project/index.html
@@ -366,13 +366,60 @@
                         <figcaption>Ian Face (Mask)</figcaption>
                     </td>
                     <td>
-                        <img src="./Images/gradient-domain-fusion/poisson-blending/ian-shooting.png"
-                            align="middle" />
+                        <img src="./Images/gradient-domain-fusion/poisson-blending/ian-shooting.png" align="middle" />
                         <figcaption>Ian Shooting</figcaption>
                     </td>
                 </tr>
             </table>
+        </div>
+        <br>
+        <br>
+        <h2 align="middle">Section III: Bells and Whistles - Mixed Gradients</h2>
+
+        <div class="bounding-box">
+            <h3 align="middle">
+
+            </h3>
+            <p>
+                In this section, I implemented mixed gradients into the Poisson blending algorithm. The only difference
+                is that I took the maximum between the source and target gradients instead of worrying about just the
+                source gradients from the above equations. This helps to create a better seamless transition between the
+                two images overlaid on top of each other. Here are the results:
+            </p>
+            <table>
+                <tr align="center">
+                    <td>
+                        <img src="./Images/gradient-domain-fusion/poisson-blending/penguin-without-mixed.png"
+                            align="middle" />
+                        <figcaption>Penguin without Mixed Gradients</figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/gradient-domain-fusion/poisson-blending/penguin-with-mixed.png"
+                            align="middle" />
+                        <figcaption>Penguin with Mixed Gradients</figcaption>
+                    </td>
+                </tr>
+            </table>
+
             <br>
+            <p>
+                As shown above, the image with mixed gradients has a more seamless transition between the two images,
+                specifically where there is the dirty snow while the image without mixed gradients still has the seams
+                on the sides and worse blending there. Mixed gradients is useful when there is a significant gradient change such as harsh lines. It helps to smooth out the transition between the two images.
+            </p>
+        </div>
+
+        <br>
+        <br>
+        <h2 align="middle">Section IV: Summary</h2>
+        <div class="bounding-box">
+            <h3 align="middle">
+                Learnings
+            </h3>
+            <p>
+                For this project, I learned how to use gradient-domain processing to blend two images together. I had used images from project 2 where I used Laplacian and Gaussian pyramids to blend in images. This seems to solve for specified pixel intensities and gradients and I learned how to create stronger blends with mixed gradients.
+            </p>
         </div>
 </body>
+
 </html>
