--- a/cs180/final-project/index.html
+++ b/cs180/final-project/index.html
@@ -41,12 +41,18 @@
 
 
         <div class="bounding-box">
+            <h2 align="middle">Note</h2>
+
+            This report contains a gif that may not load properly if viewed in the pdf. Please click the link above to
+            view the report online.
+            <br><br>
 
             <h2 align="middle" id="lightfield-cameras">Overview</h2>
 
             For this project, I reproduced the effects from a Lytro camera using real lightfield data via shifting and
             averaging. The images were captured over a plane orthogonal to the optical axis which helps to achieve the
             complex effects shown below.
+
             <br><br>
         </div>
 
@@ -405,7 +411,8 @@
             <p>
                 As shown above, the image with mixed gradients has a more seamless transition between the two images,
                 specifically where there is the dirty snow while the image without mixed gradients still has the seams
-                on the sides and worse blending there. Mixed gradients is useful when there is a significant gradient change such as harsh lines. It helps to smooth out the transition between the two images.
+                on the sides and worse blending there. Mixed gradients is useful when there is a significant gradient
+                change such as harsh lines. It helps to smooth out the transition between the two images.
             </p>
         </div>
 
@@ -417,7 +424,10 @@
                 Learnings
             </h3>
             <p>
-                For this project, I learned how to use gradient-domain processing to blend two images together. I had used images from project 2 where I used Laplacian and Gaussian pyramids to blend in images. This seems to solve for specified pixel intensities and gradients and I learned how to create stronger blends with mixed gradients.
+                For this project, I learned how to use gradient-domain processing to blend two images together. I had
+                used images from project 2 where I used Laplacian and Gaussian pyramids to blend in images. This seems
+                to solve for specified pixel intensities and gradients and I learned how to create stronger blends with
+                mixed gradients.
             </p>
         </div>
 </body>
