--- a/cs180/final-project/index.html
+++ b/cs180/final-project/index.html
@@ -71,8 +71,7 @@
                 address this, I shifted the images appropriately around the reference image and then used a constant to
                 vary this shift. This is the following equation I used:
 
-                $$ \text{(shift_x, shift_y)} = c \cdot (\text{(reference_x, reference_y)} - \text{(center_x,
-                center_y)})$$
+                $$ \text{(shift_x, shift_y)} = c \cdot (\text{(reference_x, reference_y)} - \text{(center_x, center_y)})$$
 
                 Here are some images and gif with varying levels of $c$.
             </p>
